Fixes text spacing when button is compressed

--- a/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
+++ b/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
@@ -1017,6 +1017,9 @@ What: Styles the watermark for D8.
   font-style: italic;
   font-weight: normal;
 }
+.watermark .wm-forward {
+  line-height: 1.1em;
+}
 .watermark .wm-forward a,
 .watermark .wm-ops a {
   margin: auto 10px;
